--- a/src/Header.css
+++ b/src/Header.css
@@ -2,10 +2,11 @@
     position: sticky;
     top: 0;
     display: flex;
+    background-color: white;
     justify-content: space-evenly;
     border-bottom: 0.1px solid lightgray;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: -10px;
+    padding-bottom: 0px;
     width: 100%;
     z-index: 999;
 }
@@ -18,6 +19,7 @@
 .header__search {
     padding: 10px;
     display: flex;
+    margin-top: 12px;
     align-items: center;
     border-radius: 5px;
     height: 22px;
@@ -35,6 +37,7 @@
 .header__left > img {
     object-fit: contain;
     height: 40px;
+    margin-top: 12px;
     margin-right: 10px;
 }
 
